objects/Job_Site__c.object
<CustomObject>
    <description>It stores different websites where we can post our company vacancies. This is the change I made.</description>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Valid_Untill__c</fullName>
        <label>Valid Untill</label>
        <type>Date</type>
    </fields>
    <label>Job Site</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Site_Name__c</columns>
        <columns>Site_URL__c</columns>
        <columns>Valid_Untill__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
    </listViews>
    <nameField>
        <label>Job Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>